force-app/main/default/objects/Loan_Details__c/Loan_Details__c.object-meta.xml
<CustomObject>
    <label>Loan Details</label>
    <nameField>
        <displayFormat>LD-{0000}</displayFormat>
        <label>Loan Details ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loan Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>