force-app/main/default/objects/Loan_Details__c/fields/Interest_Type__c.field-meta.xml
<CustomField>
    <fullName>Interest_Type__c</fullName>
    <description>Fixed / Floating</description>
    <label>Interest Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fixed</fullName>
            </value>
            <value>
                <fullName>Floating</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>