force-app/main/default/objects/Loan_Details__c/fields/Loan_Tenure__c.field-meta.xml
<CustomField>
    <fullName>Loan_Tenure__c</fullName>
    <description>Duration of loan in months</description>
    <label>Loan Tenure</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>