force-app/main/default/objects/Loan_Details__c/fields/Loan_Type__c.field-meta.xml
<CustomField>
    <fullName>Loan_Type__c</fullName>
    <description>New Vehicle, Used Vehicle</description>
    <label>Loan Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New_Vehicle</fullName>
                <label>New Vehicle</label>
            </value>
            <value>
                <fullName>Used_Vehicle</fullName>
                <label>Used Vehicle</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>