force-app/main/default/objects/Loan_Details__c/fields/Purchase_Amount__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Amount__c</fullName>
    <description>Full Amount of Vehicle Including Tax</description>
    <label>Purchase Amount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>