force-app/main/default/objects/Loan_Details__c/fields/Purpose_of_Loan__c.field-meta.xml
<CustomField>
    <fullName>Purpose_of_Loan__c</fullName>
    <description>Reason for loan</description>
    <label>Purpose of Loan</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Personal Use</fullName>
            </value>
            <value>
                <fullName>Commercial Use</fullName>
            </value>
            <value>
                <fullName>Replacement Vehicle</fullName>
            </value>
            <value>
                <fullName>Fleet Expansion</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>